---
title: Entity Relationship Diagram StayManager (Pasca Schema Cleanup, 26 Tabel, 39 FK)
---
erDiagram
    auth_users ||--o| users : "1:1 sync"
    auth_users ||--o| profiles : "user_id"
    auth_users ||--o{ guests : "user_id"
    auth_users ||--o{ Chat : "user_id"
    auth_users ||--o{ user_roles : "user_id"
    auth_users ||--o{ user_roles : "assigned_by"
    auth_users ||--o{ expenses : "approved_by"
    auth_users ||--o{ inventory_purchase_orders : "created_by"
    auth_users ||--o{ inventory_transactions : "created_by"
    auth_users ||--o{ room_service_requests : "created_by_user_id"

    roles ||--o{ user_roles : "role_id"

    profiles ||--o{ invoices : "created_by"
    profiles ||--o{ deposits : "collected_by"
    profiles ||--o{ deposits : "refunded_by"

    custom_room_types ||--o{ rooms : "type"

    guests ||--o{ reservations : "guest_id"
    guests ||--o{ billing_items : "guest_id"
    guests ||--o{ guest_facility_requests : "guest_id"
    guests ||--o{ room_service_requests : "guest_id"

    rooms ||--o{ reservations : "room_id"
    rooms ||--o{ housekeeping_tasks : "room_id"
    rooms ||--o{ billing_items : "room_id"
    rooms ||--o{ guest_facility_requests : "room_id"
    rooms ||--o{ room_service_requests : "room_id"

    reservations ||--o{ payments : "reservation_id"
    reservations ||--o{ billing_items : "reservation_id"
    reservations ||--o{ guest_facility_requests : "reservation_id"
    reservations ||--o{ deposits : "reservation_id"
    reservations ||--o{ invoices : "reservation_id"
    guests ||--o{ invoices : "guest_id"

    staff_members ||--o{ housekeeping_tasks : "staff_id"
    staff_members ||--o{ room_service_requests : "staff_id"

    guest_facility_requests ||--o{ guest_facility_items : "request_id"
    service_items ||--o{ guest_facility_items : "service_item_id"
    service_items ||--o{ room_service_requests : "service_item_id"

    inventory_suppliers ||--o{ inventory_purchase_orders : "supplier_id"
    inventory_purchase_orders ||--o{ inventory_purchase_order_items : "po_id"
    inventory_items ||--o{ inventory_purchase_order_items : "item_id"
    inventory_items ||--o{ inventory_transactions : "item_id"

    auth_users {
        uuid id PK
        text email
    }
    users {
        uuid id PK
        text email
        text full_name
    }
    profiles {
        uuid id PK
        uuid user_id FK
        varchar employee_id
        varchar full_name
        varchar role
    }
    roles {
        uuid id PK
        text name UK
        jsonb permissions
    }
    user_roles {
        uuid id PK
        uuid user_id FK
        uuid role_id FK
        uuid assigned_by FK
    }
    guests {
        uuid id PK
        uuid user_id FK
        varchar full_name
        varchar email
    }
    rooms {
        uuid id PK
        varchar number
        varchar type FK
        integer floor
        numeric base_price
        varchar status
    }
    custom_room_types {
        int id PK
        varchar name UK
        jsonb amenities
        numeric base_price
    }
    reservations {
        uuid id PK
        varchar booking_id UK
        uuid guest_id FK
        uuid room_id FK
        date check_in
        date check_out
        text status
    }
    payments {
        uuid id PK
        uuid reservation_id FK
        text transaction_id
        numeric amount
        text status
    }
    billing_items {
        int id PK
        uuid guest_id FK
        uuid reservation_id FK
        uuid room_id FK
        varchar item_name
        numeric unit_price
        numeric total_price
        varchar status
    }
    invoices {
        int id PK
        uuid created_by FK
        uuid reservation_id FK
        uuid guest_id FK
        varchar invoice_number
        numeric total_amount
        varchar status
    }
    deposits {
        int id PK
        uuid reservation_id FK
        uuid collected_by FK
        uuid refunded_by FK
        numeric amount
    }
    expenses {
        int id PK
        uuid approved_by FK
        date expense_date
        numeric amount
    }
    housekeeping_tasks {
        int id PK
        uuid room_id FK
        int staff_id FK
        varchar created_by
        text task_type
        text status
    }
    staff_members {
        int id PK
        varchar employee_id UK
        varchar full_name
        varchar role
    }
    inventory_items {
        int id PK
        varchar name
        varchar category
        integer current_stock
        integer min_stock
        numeric unit_cost
    }
    inventory_suppliers {
        bigint id PK
        text name
    }
    inventory_purchase_orders {
        bigint id PK
        bigint supplier_id FK
        uuid created_by FK
        text status
    }
    inventory_purchase_order_items {
        bigint id PK
        bigint po_id FK
        bigint item_id FK
        int quantity
    }
    inventory_transactions {
        bigint id PK
        bigint item_id FK
        text transaction_type
        numeric quantity
        text reference_id
        uuid created_by FK
    }
    Chat {
        uuid id PK
        uuid user_id FK
        jsonb messages
    }
    hotel_settings {
        uuid id PK
        text brand_name
        text brand_logo_url
    }
    guest_facility_requests {
        uuid id PK
        uuid guest_id FK
        uuid reservation_id FK
        uuid room_id FK
        varchar service_type
        varchar status
    }
    guest_facility_items {
        uuid id PK
        uuid request_id FK
        int service_item_id FK
        varchar item_name
        int quantity
    }
    service_items {
        int id PK
        varchar service_code UK
        varchar name
        numeric price
    }
    room_service_requests {
        bigint id PK
        uuid room_id FK
        uuid guest_id FK
        int staff_id FK
        int service_item_id FK
        uuid created_by_user_id FK
        text status
    }
